fixed text align

--- a/client/src/components/styles/SearchBar.module.css
+++ b/client/src/components/styles/SearchBar.module.css
@@ -29,6 +29,10 @@
   width: 100%;
 }
 
+.searchfield::placeholder {
+  text-align: center;
+}
+
 .submit {
   cursor: pointer;
   width: fit-content;
